# cpfa

./: .gitignore  README.md  build.sh  experiments_pipeline.sh  hpc_qsub.sh  hpc_start_simulation2.py  load_simulation.sh  mult_div_submission_loop.sh  recompile.py  schedule_tasks.sh
compiled_plugins/: start_simulation
params/: params.csv
results/2019-06-11-Uniform100m-TEST/: 1-NA0.25-AtD12-M6-D1000-2019-06-11--17-02-07_litter_count.txt
results/2019-06-12-Uniform100m-TEST/: 1-NA0.25-AtD12-M6-D1000-2019-06-12--14-15-14_litter_count.txt  1-NA0.25-AtD12-M6-D1000-2019-06-12--14-24-40_litter_count.txt
results/2019-06-18-Uniform100m-TEST/: 1-NA0.25-AtD12-M6-D1000-2019-06-18--15-42-19_litter_count.txt
sources/m_4wrobot/: model.config
sources/m_litter/: model.config
sources/m_nest/: model.config
sources/models/m_4wrobot/: m_4wrobot.sdf  m_4wrobotrev.sdf.erb
sources/models/w_swarm/: w_swarm1.world.erb  w_swarm1_m_4wrobot.world.erb  w_swarm1circle.world.erb
sources/models/w_swarm/world_db/: 20180208_w_swarm1_circular_one_region_cluster-white.world  20180821_w_swarm1_1litter_1robot.world  w_swarm1_no_litter.world
sources/models/w_swarm/world_db/erb/: 20180208_w_swarm1_circular_one_region_cluster.world.erb  20180208_w_swarm1_circular_one_region_cluster_100m.world.erb  20180208_w_swarm1_circular_two_region_cluster.world.erb  20180208_w_swarm1_circular_two_region_cluster_100m.world.erb  20180209_w_swarm1_circular_four_clusters.world.erb  (+6 more)
sources/models/w_swarm1/world_db/: 20180208_w_swarm1_circular_one_region_cluster-white.world  20180208_w_swarm1_circular_one_region_cluster.world  20180208_w_swarm1_circular_one_region_cluster_100m.world  20180208_w_swarm1_circular_one_region_cluster_unbounded.world  20180208_w_swarm1_circular_two_region_cluster.world  20180208_w_swarm1_circular_two_region_cluster_100m.world  20180208_w_swarm1_circular_two_region_cluster_unbounded.world  20180209_w_swarm1_circular_four_clusters.world  20180209_w_swarm1_circular_four_clusters_100m.world  20180209_w_swarm1_circular_four_clusters_unbounded.world  20180209_w_swarm1_circular_half_cluster_half_uniform.world  20180209_w_swarm1_circular_half_cluster_half_uniform_100m.world  20180209_w_swarm1_circular_half_cluster_half_uniform_unbounded.world  20180209_w_swarm1_circular_uniform_litter.world  20180209_w_swarm1_circular_uniform_litter_100m.world  20180209_w_swarm1_circular_uniform_litter_unbounded.world  20180821_w_swarm1_1litter_1robot.world  20190208_circle_bound.world  20190208_no_bound.world  20190208_square_bound.world  20190218_Uniform_Bound_100m.world  20190218_Uniform_NoBound_100m.world  20190218_Uniform_NoBoundv0_100m.world  20190218_uniform100_rad14.world  20190218_uniform100_rad14_noBound.world  20190219_Uniform_Bound_100m_1000targets.world  20190219_Uniform_NoBound_100m_1000targets.world  w_swarm1_no_litter.world
sources/mp_cpfa/: CMakeLists.txt  mp_cpfa.cc
sources/plugins/: CMakeLists.txt
sources/plugins/custom_msgs/: CMakeLists.txt  simulation_params.proto
sources/plugins/mp_cpfa/: mp_cpfa.cc
sources/plugins/robot/: CMakeLists.txt
sources/plugins/robot/include/: robot.hh
sources/plugins/start_simulation/: CMakeLists.txt  custom_msgs
sources/plugins/start_simulation/include/: start_simulation.hh
sources/plugins/start_simulation/src/: start_simulation.cc
sources/plugins/wp_swarm/: CMakeLists.txt
sources/plugins/wp_swarm/include/: start_simulation.hh  wp_swarm.hh
sources/plugins/wp_swarm/src/: start_simulation.cc  wp_swarm.cc  wp_swarm_onupdate.cc
(+90 files in other folders)
